--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "jest --detectOpenHandles"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "express": "^5.1.0"
   }
 }
